2008-08-04  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUnnecessarySpecializationTest.cs: Add test cases where
	methods parameters are dictated from the interface definition.

2008-08-03  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidComplexMethodsTest.cs: Add test cases for better coverage.
	Use Cecil (instead of reflection) to read ExpectedCC.
	* ConsiderUsingStopwatchTest.cs: Complete coverage by adding 
	test cases for Initialize and an external method (DoesNotApply). 
	Added test cases to check for Ref/Out DateTime parameters.

2008-07-13  Sebastien Pouliot  <sebastien@ximian.com> 

	* ConsiderUsingStopwatchTest.cs: Test cases for 
	ConsiderUsingStopwatchRule [committed for Cedric Vivier]
	* Test.Rules.Maintainability.mdp: Update MD project files.

2008-07-13  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUnnecessarySpecializationTest.cs: Test cases for
	AvoidUnnecessarySpecializationRule [committed for Cedric Vivier]
	* Test.Rules.Maintainability.mdp: Update MD project files.

2008-07-11  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidDeepInheritanceTreeTest.cs: A second set of test cases
	for the (new) default rule behaviour, working on the set of
	assemblies only (not the whole resolvable framework). Patch by
	Cedric Vivier.

2008-05-18  Sebastien Pouliot  <sebastien@ximian.com> 

	* PreferStringIsNullOrEmptyTest.cs: New. Unit tests for 
	PreferStringIsNullOrEmptyRule.

2008-05-10  Sebastien Pouliot  <sebastien@ximian.com> 

	* AvoidDeepInheritanceTreeTest.cs: New. Unit tests for 
	AvoidDeepInheritanceTreeRule.

2008-05-10  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidComplexMethodsTest.cs: Adapt unit tests with new threshold.

2008-05-01  Sebastien Pouliot  <sebastien@ximian.com>

	* Tests.Rules.Maintainability.csproj: New. VS.NET project file.
	* Makefile.am: Add project files to dist

2008-04-27  Andres G. Aragoneses  <aaragoneses@novell.com>

	* Test.Rules.Maintainability.mdp: New project.
