@@ -388,5 +388,60 @@ namespace Test.Rules.Maintainability {
 			AssertRuleDoesNotApply<TestRule> ("CheckType");
 			AssertRuleDoesNotApply<TestRule> ("CheckMethod");
 		}
+
+		// based on System.Boolean Gendarme.Rules.Smells.AvoidLongMethodsRule::IsAutogeneratedByTools(Mono.Cecil.MethodDefinition)
+		// original recommandation is IMethodSignature - which does not supply a DeclaringType property
+		private static bool IsAutogeneratedByTools (MethodDefinition method)
+		{
+			if (method.Parameters.Count != 0)
+				return false;
+
+			return (method.DeclaringType.Resolve () == null);
+		}
+
+		[Test]
+		[Ignore ("not working")]
+		public void FalsePositive ()
+		{
+			AssertRuleSuccess<AvoidUnnecessarySpecializationTest> ("IsAutogeneratedByTools");
+		}
+
+		private static bool Compare (MethodDefinition method)
+		{
+			return (method == null);
+		}
+
+		private static bool Unused (MethodDefinition method)
+		{
+			return false;
+		}
+
+		[Test]
+		public void NoInformation ()
+		{
+			AssertRuleSuccess<AvoidUnnecessarySpecializationTest> ("Compare");
+			AssertRuleSuccess<AvoidUnnecessarySpecializationTest> ("Unused");
+		}
+
+		private bool CheckValueType (byte b)
+		{
+			return (b == 0);
+		}
+
+		private bool CheckArray (object [] array)
+		{
+			foreach (object o in array) {
+				if (o == null)
+					return true;
+			}
+			return false;
+		}
+
+		[Test]
+		public void Ignored ()
+		{
+			AssertRuleSuccess<AvoidUnnecessarySpecializationTest> ("CheckValueType");
+			AssertRuleSuccess<AvoidUnnecessarySpecializationTest> ("CheckArray");
+		}
 	}
 }
